Password reset on profile (#24)
* add new api endpoint for password reset profile

* add validation and api for password reset profile

* add documentation for password reset profile

* feat: improve response status and validation

* feat: more docs and status message

---------
