# src/api/middlewares/validation.js
@@ -85,6 +85,39 @@ export function isValidResetPasswordPayload(req, res, next) {
 /**
  * Check if valid credentials.
  *
+ * @type {Types.Middleware}
+ * @returns {void}
+ */
+export function isValidResetPasswordProfile(req, res, next) {
+  const { old_password, new_password } = req.body;
+
+  if (!old_password || !new_password) {
+    res
+      .status(400)
+      .json({ message: 'Old password and new password are required' });
+    return;
+  }
+
+  if (typeof old_password !== 'string' || typeof new_password !== 'string') {
+    res
+      .status(400)
+      .json({ message: 'Old password and new password must be string' });
+    return;
+  }
+
+  if (new_password === old_password) {
+    res
+      .status(409)
+      .json({ message: 'New password cannot be the same as old password' });
+    return;
+  }
+
+  next();
+}
+
+/**
+ * Check if valid credentials.
+ *
  * @type {Types.Middleware<
  *   Types.ExtractLocalsMiddleware<typeof isAdmin> & {
  *     course: CourseModel.CourseAttributes;
